--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -4,3 +4,6 @@ en:
     github_committer_email: "Email of the user committing files"
     github_access_token: "Access token of the user committing files, with write access"
     delete_post_file_when_post_deleted: "Delete the related post/topic file(s) when a post/topic is deleted"
+    log_when_post_synced: "Log when a topic or post is uploaded to Github"
+    topic_post_template: "The file template for topic files"
+    reply_post_template: "The file template for post (reply) files"
