--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -6,5 +6,6 @@ en:
     target_github_repo: "The Github repository where files will be uploaded to"
     delete_post_file_when_post_deleted: "Delete the related post/topic file(s) when a post/topic is deleted"
     log_when_post_synced: "Log when a topic or post is uploaded to Github"
+    backfill_sync_topics_count: "How many topics to sync each time when running the backfill"
     topic_post_template: "The file template for topic files"
     reply_post_template: "The file template for post (reply) files"
